Fix a couple styling regressions on iOS.

--- a/styles/fixed-header-footer.styl
+++ b/styles/fixed-header-footer.styl
@@ -13,5 +13,7 @@
   .fixed-content-pane
     flex 1
     overflow scroll
+    // TODO: Get this picked up by autoprefixer.
+    -webkit-overflow-scrolling touch
     position relative
 
