--- a/styles/global.styl
+++ b/styles/global.styl
@@ -42,6 +42,8 @@ body #iphone-status-bar-spacer
 iphone-status-bar-height = 20px
 
 #app-root
+  // Necessary for stupid hackery with fixed-header-footer.
+  position relative
   height 100%
 
 body[standalone]
